# antp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  ci-cd.yml
antp/: __main__.py  common.py  consts.py  exporter.py  importer.py  overwriter.py  updater.py
gomi/: __main__.py  updater.py
tests/: export.py  import.py  list_decks.py
