[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antp"
dynamic = ["version"]
description = 'Package to store and manage Note Types for Anki in a git repository.'
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
keywords = []
authors = [
  {name = "Ajatt-Tools and contributors"},
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/antp#readme"
Issues = "https://github.com/Ajatt-Tools/antp/issues"
Source = "https://github.com/Ajatt-Tools/antp"

[project.scripts]
antp = "antp.__main__:main"

[tool.hatch.version]
path = "src/antp/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/antp tests}"

[tool.coverage.run]
source_pkgs = ["antp", "tests"]
branch = true
parallel = true
omit = [
  "src/antp/__about__.py",
]

[tool.coverage.paths]
antp = ["src/antp", "*/antp/src/antp"]
tests = ["tests", "*/antp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
