[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "hatch-vcs",
]

[project]
name = "antp"
dynamic = ["version"]
description = 'Package to store and manage Note Types for Anki in a git repository.'
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = []
authors = [
  {name = "Ajatt-Tools and contributors"},
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Ajatt-Tools/antp#readme"
Issues = "https://github.com/Ajatt-Tools/antp/issues"
Source = "https://github.com/Ajatt-Tools/antp"

[project.scripts]
antp = "antp.__main__:main"

[tool.hatch.version]
source = "vcs"
path = "antp/__about__.py"

[tool.hatch.build.hooks.vcs]
version-file = "antp/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/antp tests}"

[tool.coverage.run]
source_pkgs = ["antp", "tests"]
branch = true
parallel = true
omit = [
  "src/antp/__about__.py",
]

[tool.coverage.paths]
antp = ["src/antp", "*/antp/src/antp"]
tests = ["tests", "*/antp/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.hatch.envs.dev]
dependencies = [
  "mypy>=1.0.0",
  "isort",
  "pytest",
  "black",
]

[tool.hatch.envs.dev.scripts]
# run as `hatch run dev:scriptname`
format = "black ."
test = "pytest"
